Replace padding1x -> spacing1x and fix wordings

--- a/styl/app.styl
+++ b/styl/app.styl
@@ -16,7 +16,7 @@ h3
   letter-spacing: letterSpacing
 
 p
-  margin: padding2x 0
+  margin: spacing2x 0
   font-family: fontFamilySourceSans
   font-size: fontSizeSmall
   letter-spacing: letterSpacing
@@ -30,7 +30,7 @@ p
     content: 'Math Navigator'
 
 button
-  padding: padding1x padding2x
+  padding: spacing1x spacing2x
   outline: none
   border: none
   color: colorWhite
