--- a/styl/header.styl
+++ b/styl/header.styl
@@ -20,7 +20,7 @@
   & img
     width: 36px
     height: 36px
-    margin-right: padding2x
+    margin-right: spacing2x
 
   & h1
     display: inline-block
@@ -61,7 +61,7 @@
     display: inline-block
     width: 18px
     height: 10px
-    margin-left: padding1x
+    margin-left: spacing1x
     background-image: url('../assets/arrow_down_white.svg')
     background-size: cover
 
@@ -97,7 +97,7 @@
       color: colorAccent1
 
   & li
-    padding: padding2x padding3x
+    padding: spacing2x spacing3x
     list-style: none
     font-size: fontSizeNormal
     cursor: pointer
