--- a/styl/home.styl
+++ b/styl/home.styl
@@ -32,7 +32,7 @@
       font-size: fontSizeLarger
       line-height: lineHeightLarger
     & h2
-      margin-bottom: padding2x
+      margin-bottom: spacing2x
       color: colorAccent1
       font-size: fontSizeSmall
       line-height: lineHeightSmall
@@ -41,7 +41,7 @@
     position: absolute
     right: 10%
     bottom: 20%
-    padding: padding2x padding3x
+    padding: spacing2x spacing3x
 
 .section
   width: containerWidthPct
@@ -65,7 +65,7 @@
 .home-program-card
   display: inline-block
   width: calc(33% - 46px)
-  padding: 0 padding3x
+  padding: 0 spacing3x
   vertical-align: top
 
   &:first-child
@@ -86,11 +86,12 @@
 
   & h3
     color: colorPrimary
-    margin: padding4x 0
+    margin: spacing4x 0
     text-align: center
 
   & p
-    margin-bottom: padding4x
+    margin-bottom: spacing4x
+    color: colorBlackDark
     text-align: center
 
   & button
